# Research_Radar_agent_phd_assistant

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dashboard.py  demo_ranker.py  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt  send_test.py  storage.py
.github/workflows/: test.yml
data/: ground_truth_papers.csv
src/: agent_arxiv.py  digest_sender.py  feedback_server.py  monitor.py  rag_ranker.py
tests/: test_arxiv.py  test_digest.py  test_llm_judge.py  test_monitor.py  test_ranker.py
