[project]
name = "research-radar"
version = "1.0.0"
description = "Personalized AI PhD Research Assistant — daily ArXiv digest via RAG + agents"
requires-python = ">=3.10"

dependencies = [
    "python-dotenv==1.0.1",
    "resend==2.30.1",
    "requests==2.31.0",
    "numpy==1.26.4",
    "scikit-learn==1.4.1.post1",
    "scipy>=1.15.3",
    "sentence-transformers==2.3.1",
    "transformers==4.36.2",
    # Installs standard torch on Windows/Mac, but small CPU-only torch on Linux/Docker
    "torch==2.0.1; sys_platform != 'linux'",
    "torch==2.0.1+cpu; sys_platform == 'linux'",
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "streamlit>=1.58.0",
    "pandas>=2.3.3",
    "sympy>=1.13",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
]

[project.scripts]
research-radar = "pipeline:run"

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# 1. Define the external PyTorch CPU index URL
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# 2. Tell uv to look specifically at that index ONLY for the linux CPU torch variant
[tool.uv.sources]
"torch" = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
